Update: reminders db
