# todo/urls.py
@@ -1,8 +1,9 @@
 from django.urls import path
-from .views import CheckCalendar, CheckToday, CheckReminders
+from .views import CheckCalendar, CheckToday, Reminders, Reminder
 
 urlpatterns = [
     path('calendar/today', CheckToday),
     path('calendar', CheckCalendar),
-    path('reminders', CheckReminders)
+    path('reminders', Reminders),
+    path('reminders/<int:id>', Reminder)
 ]
